# WikiAnswers-Embeddings

./: .gitignore  LICENSE  README.md  create_raw_dataset.ipynb  pyproject.toml  run_embedding_script.py  run_embeddings_scripts.ps1
src/: generate_embeddings.py
