[tool.poetry]
name = "wikianswers embeddings"
version = "0.1.0"
description = "This repo contains the code for embedding WikiAnswers dataset with varying embedding sizes and embedding models"
authors = ["nikhil-chigali <nikhil.chigali@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.2.2+cu121", source = "torchwheels"}
sentence-transformers = "^2.6.1"
datasets = "^2.18.0"
laser-encoders = "^0.0.1"
scikit-learn = "^1.4.1.post1"
lightning-sdk = "^0.1.3"
tqdm = "^4.66.2"
jupyter-client = "^8.6.1"
ipywidgets = "^8.1.2"


[[tool.poetry.source]]
name = "torchwheels"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
